--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
           navigator.serviceWorker.register('./service-worker.js')
         }else{
           alert('浏览器暂不支持 Service Worker');
-        }</script><link href=./static/css/app.b653f3b351c057ce52f30fd47e55ae76.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.208c6c960d24c1011df5.js></script><script type=text/javascript src=./static/js/vendor.231521cba4be204362b7.js></script><script type=text/javascript src=./static/js/app.9938357a772f0bbeab05.js></script></body></html>
+        }</script><link href=static/css/app.b653f3b351c057ce52f30fd47e55ae76.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.182a7b22d1e73f43dc0a.js></script><script type=text/javascript src=static/js/vendor.231521cba4be204362b7.js></script><script type=text/javascript src=static/js/app.9938357a772f0bbeab05.js></script></body></html>
